<resources>
    <string name="app_name">Make a Click</string>
    <string name="Home">Home</string>
    <string name="College">College</string>
    <string name="Work">Work</string>
    <string name="Night_Mode">Night Mode</string>
    <string name="Travel">Travel</string>

    <string name="Silent_Mode">Silent Mode</string>
    <string name="Wifi">Wifi</string>
    <string name="Brightness">Brightness</string>
    <string name="Airplane_Mode">Airplane Mode</string>

    <string name="On">ON</string>
    <string name="Off">OFF</string>

    <string name="zero_percent">0%</string>
    <string name="fifty_percent">50%</string>
    <string name="hundred_percent">100%</string>
    <string name="settings">Settings</string>
    <string name="add_profile">AddProfile</string>
    <string name="save">SAVE</string>

    <string-array name="places">
        <item>@string/Home</item>
        <item>@string/College</item>
        <item>@string/Work</item>
        <item>@string/Travel</item>
    </string-array>

    <string-array name="features">
        <item>@string/Wifi</item>
        <item>@string/Silent_Mode</item>
        <item>@string/Brightness</item>
    </string-array>


</resources>
